# WirtualnySwiatOOP

WirtualnySwiatPython/: Organism.py  animal.py  config.py  gui.py  main.py  plant.py  point.py  save.txt  square.py  world.py
WirtualnySwiatPython/Animals/: Antelope.py  CyberSheep.py  Fox.py  Human.py  Sheep.py  Turtle.py  Wolf.py
WirtualnySwiatPython/Plants/: BarszczSosnowskiego.py  Berries.py  Grass.py  Guarana.py  Milkweed.py
WirtualnySwiat_C++/: CMakeLists.txt  main.cpp
WirtualnySwiat_C++/pliki_naglowkowe/: Antylopa.h  BarszczSosnowskiego.h  Cyber_Owca.h  Czlowiek.h  Guarana.h  Lis.h  Mlecz.h  OrganismType.h  Organizm.h  Owca.h  Punkt.h  Roslina.h  Swiat.h  Trawa.h  WilczeJagody.h  Wilk.h  Zolw.h  Zwierze.h
WirtualnySwiat_C++/pliki_zrodlowe/: Antylopa.cpp  BarszczSosnowskiego.cpp  Cyber_Owca.cpp  Czlowiek.cpp  Guarana.cpp  Lis.cpp  Mlecz.cpp  Organizm.cpp  Owca.cpp  Punkt.cpp  Roslina.cpp  Swiat.cpp  Trawa.cpp  WilczeJagody.cpp  Wilk.cpp  Zolw.cpp  Zwierze.cpp
Wirtualny_Swiat_Java/Projekt_PO_Java/: save.txt
Wirtualny_Swiat_Java/Projekt_PO_Java/src/: Main.java
Wirtualny_Swiat_Java/Projekt_PO_Java/src/model/: Animal.java  Organism.java  Plant.java  Point.java  World.java
Wirtualny_Swiat_Java/Projekt_PO_Java/src/model/Organisms/: Antelope.java  BarszczSosnowskiego.java  Berries.java  Cyber_Sheep.java  Fox.java  Grass.java  Guarana.java  Human.java  Milkweed.java  Plant.java  Sheep.java  Turtle.java  Wolf.java
Wirtualny_Swiat_Java/Projekt_PO_Java/src/view/: Frame.java  Panel.java
